src/rust/items/snapshots/syn_state_machine__rust__items__extern_crate__tests__concat_idents! (parse it_matches_extern_as).snap
---
source: src/rust/items/extern_crate.rs
expression: "crate::parse::<ExternCrate>(q.clone())"
---
Ok(
    ExternCrate {
        crate_ref: CrateRef {
            id: Ident(
                hi,
            ),
        },
        as_clause: Some(
            AsClause {
                id: Ident(
                    _,
                ),
            },
        ),
    },
)
