src/rust/items/snapshots/syn_state_machine__rust__items__extern_crate__tests__it_matches_extern.snap
---
source: src/rust/items/extern_crate.rs
expression: "insta_match_test!(+ parse ExternCrate : extern crate hi ;)"
---
Ok(
    ExternCrate {
        crate_ref: CrateRef(
            Ident(
                hi,
            ),
        ),
        as_clause: None,
    },
)
